# Vulkan

./: .gitignore  CMakeLists.txt  FutureWork.md  LICENSE  README.md  build_cmake_vs.bat  build_vs_solution.bat
0-GettingStarted/0-Instance/: CMakeLists.txt  Instance.cpp
0-GettingStarted/1-PhysicalDevice/: CMakeLists.txt
0-GettingStarted/10-Texturing/: CMakeLists.txt  Texturing.cpp
0-GettingStarted/11-Camera/: CMakeLists.txt  Camera.cpp
0-GettingStarted/2-Device/: CMakeLists.txt
0-GettingStarted/3-CommandPools/: CMakeLists.txt  CommandPools.cpp
0-GettingStarted/4-Buffers/: Buffers.cpp  CMakeLists.txt
0-GettingStarted/5-Descriptors/: CMakeLists.txt  Descriptors.cpp
0-GettingStarted/6-Swapchain/: CMakeLists.txt  Swapchain.cpp
0-GettingStarted/7-Renderpass/: CMakeLists.txt
0-GettingStarted/8-Present/: CMakeLists.txt  Present.cpp
0-GettingStarted/9-GraphicsPipeline/: CMakeLists.txt  GraphicsPipeline.cpp
0-Instance/: Instance.cpp
1 - Physical Device/: PhysicalDevice.cpp
1-Advanced/0-IndirectDrawing/: CMakeLists.txt  IndirectDrawing.cpp
1-Advanced/1-ComputePipeline/: CMakeLists.txt  ComputePipeline.cpp
1-Advanced/2-ComputeParticleSystem/: CMakeLists.txt  ComputeParticleSystem.cpp
1-Advanced/3-AccelerationStructure/: AccelerationStructure.cpp  CMakeLists.txt
1-Advanced/4-RaytracingPipeline/: CMakeLists.txt  RaytracingPipeline.cpp
1-Physical Device/: CMakeLists.txt  PhysicalDevice.cpp
1-PhysicalDevice/: PhysicalDevice.cpp
10-Texturing/: CMakeLists.txt  Texturing.cpp
11-Camera/: CMakeLists.txt  Camera.cpp
12-IndirectDrawing/: CMakeLists.txt  IndirectDrawing.cpp
13-ComputePipeline/: CMakeLists.txt  ComputePipeline.cpp
14-ComputeParticleSystem/: CMakeLists.txt  ComputeParticleSystem.cpp
2-Device/: CMakeLists.txt  Device.cpp
3-CommandPools/: CMakeLists.txt  CommandPools.cpp
4-Buffers/: Buffers.cpp  CMakeLists.txt
5-Descriptors/: CMakeLists.txt  Descriptors.cpp
6-Swapchain/: CMakeLists.txt  Swapchain.cpp
7-Renderpass/: CMakeLists.txt  Renderpass.cpp
8-Present/: CMakeLists.txt  Present.cpp
9-GraphicsPipeline/: CMakeLists.txt  GraphicsPipeline.cpp  Present.cpp
Data/Models/: Octopus.mtl  PBRBoy.mtl
Data/Shaders/10-Texturing/: frag.spv  shader.frag  shader.vert  vert.spv
Data/Shaders/11-Camera/: frag.spv  shader.frag  shader.vert  vert.spv
Data/Shaders/11-IndirectDrawing/: shader.frag  shader.vert  vert.spv
Data/Shaders/12-IndirectDrawing/: frag.spv  shader.frag  shader.vert  vert.spv
Data/Shaders/13-ComputePipeline/: comp.spv  shader.comp
Data/Shaders/14-ComputeParticleSystem/ParticleSystemCompute/: comp.spv  run.bat  shader.comp
Data/Shaders/14-ComputeParticleSystem/ParticleSystemGraphics/: frag.spv  geom.spv  run.bat  shader.frag  shader.geom  shader.vert  vert.spv
Data/Shaders/9-GraphicsPipeline/: frag.spv  run.bat  shader.frag  shader.vert  vert.spv
Data/Shaders/RTX/: run.bat
Data/Shaders/RTX/Miss/: GradientMiss.rmiss
Data/Shaders/RTX/Opaque/: TexturedNoLight.rchit  TexturedReflective.rchit
Data/Shaders/RTX/RayGen/: RayGen.rgen
Data/Shaders/RTX/utils/: HitgroupHelpers.glsl  Structures.glsl
Vk-Helper/: CMakeLists.txt
Vk-Helper/include/: VkCore.hpp  VkInitializers.hpp
Vk-Helper/src/: VkCore.cpp  VkInitializers.cpp
